# clepsydra

./: Cargo.toml  README.md
llvm-lines/: Cargo.toml  main.rs
src/: NOTES.md  TODO.md  agreement.rs  database.rs  globaltime.rs  language.rs  lib.rs  main.rs  network.rs  quorum.rs  replication.rs  storage.rs  test.rs  tidmgr.rs  transaction.rs  watermarks.rs
